# -

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DATABASE.md  PRODUCT_SPEC.md  PROGRESS.md  WINDOWS_VALIDATION.md
scripts/: check-version.mjs  package-windows-release.ps1
src/: main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: repository.rs
src-tauri/src/domain/: mod.rs  models.rs  organizer.rs  reminder.rs
src-tauri/src/platform/: tray.rs  window.rs
src-tauri/windows/: nsis-hooks.nsh
src/app/: App.tsx  MainApp.tsx  Sidebar.tsx
src/components/: Highlight.tsx  MarkdownView.tsx
src/config/: app.ts
src/features/notes/: NoteEditor.tsx  NoteList.tsx  useNoteDraft.ts
src/features/quick/: QuickWindow.tsx
src/features/search/: SearchBar.tsx
src/features/settings/: SettingsPage.tsx
src/services/: api.ts  autosave.ts
src/stores/: notesStore.ts  searchStore.ts  settingsStore.ts  uiStore.ts
src/styles/: app.css  tokens.css
tests/: autosave.test.ts  components.test.tsx  window-capability.test.ts
