[package]
name = "shanji"
version = "0.1.1"
description = "一款轻量、快捷、本地优先的桌面备忘录"
authors = ["Shanji"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "shanji_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
regex = "1"
rusqlite = { version = "0.40", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
